--- a/InTouch/CommunicationWebApi/appsettings.json
+++ b/InTouch/CommunicationWebApi/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "CommunicationWebApiContext": "Server=(localdb)\\mssqllocaldb;Database=CommunicationWebApi.Data;Trusted_Connection=True;MultipleActiveResultSets=true"
+  }
 }
