--- a/InTouch/CommunicationWebApi/CommunicationWebApi.csproj
+++ b/InTouch/CommunicationWebApi/CommunicationWebApi.csproj
@@ -9,6 +9,12 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <None Remove="Communication.db" />
+    <None Remove="Communication.db-shm" />
+    <None Remove="Communication.db-wal" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="6.0.10">
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
