--- a/InTouch/CommunicationWebApi/appsettings.json
+++ b/InTouch/CommunicationWebApi/appsettings.json
@@ -7,6 +7,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "CommunicationWebApiContext": "Server=(localdb)\\mssqllocaldb;Database=CommunicationWebApi.Data;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "CommunicationWebApiContext": "Server=(localdb)\\mssqllocaldb;Database=CommunicationWebApi.Data;Trusted_Connection=True;MultipleActiveResultSets=true",
+    "CommunicationDbContext": "Data Source=Communication.db"
   }
 }
