first test case added

--- a/InTouch/CommunicationWebApi.Tests/CommunicationWebApi.Tests.csproj
+++ b/InTouch/CommunicationWebApi.Tests/CommunicationWebApi.Tests.csproj
@@ -23,4 +23,8 @@
     </PackageReference>
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\CommunicationWebApi\CommunicationWebApi.csproj" />
+  </ItemGroup>
+
 </Project>
